apps/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: dev-cartyx-tls
      hosts:
        - dev.cartyx.io
        - dev-ws.cartyx.io
  rules:
    - host: dev.cartyx.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: dev-ws.cartyx.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws
                port:
                  number: 80
